--- a/package.json
+++ b/package.json
@@ -4,13 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node index.js",
+    "start_local": "echo use: $ npm run dev",
+    "dev": "node -r dotenv/config index.js"
   },
-  "keywords": [],
-  "author": "",
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true
+  },
+  "author": "Sofia",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4"
+  },
+  "devDependencies": {
+    "dotenv": "^8.6.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1",
+    "vite": "^2.9.5"
   }
 }
