env file (even if it's on gitignore)

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@
 
 #connection port
 #PORT= 'your-port'
+FRONTEND='../TNavigateVue/dist'
 
+PORT='3000'
 #mongodb connection url with username, password and my-db
 DB_URL='mongodb+srv://sofiazandona:MongoDB17@cluster0.6a7o7gj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 
