changed option in jest.config.js

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 
 #connection port
 #PORT= 'your-port'
-#FRONTEND='../TNavigateVue/dist'
-FRONTEND='https://github.com/Sofiaz17/TNavigateApp.git'
+FRONTEND='../TNavigateVue/dist'
+#FRONTEND='https://github.com/Sofiaz17/TNavigateApp.git'
 
 PORT='3000'
 #mongodb connection url with username, password and my-db
