--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Sofia",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
