implemented add/remove shop option from shop owner profile + bug fixes

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 #PORT= 'your-port'
 
 #FRONTEND='../TNavigateVue/dist'
-FRONTEND=http://localhost:5173
+FRONTEND=http://Sofiaz17/TNavigateVue
 
 #FRONTEND='https://github.com/Sofiaz17/TNavigateApp.git'
 
