Implemented signup and login with google [WIP]

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,34 @@
+
+# .env.example
+
+# This is an example file for running the app locally.
+# This must be copied into .env file
+
 #connection port
-PORT= 'your-port'
+#PORT= 'your-port'
+
+#FRONTEND='../TNavigateVue/dist'
+#FRONTEND=http://Sofiaz17/TNavigateVue
+
+#mongodb connection url with username, password and my-db
+#DB_URL='your-mongodb-connection-url'
+
+
+# Passphrase used to generate jwt token 
+#SUPER_SECRET='your-passphrase-to-generate-jwt-token'
+
+#NODE_ENV=development
+
+# for google oauth 
+#GOOGLE_CLIENT_ID=your-google-client-id
+#GOOGLE_CLIENT_SECRET=your-google-client-secret
+#SESSION_SECRET=a-strong-session-secret
+
+#connection port
+#PORT= 'your-port'
 
 #mongodb connection string
-DB_URL='mongodb://127.0.0.1:27017'
+#DB_URL='mongodb://127.0.0.1:27017'
 
 #Maps API secret key
-MAPS_KEY='your-maps-api-key'
+#MAPS_KEY='your-maps-api-key'
