--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
