fixed issues with google oauth

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:api": "node scripts/test-api.js",
-    "start": "node index.js",
+    "start": "node -r dotenv/config index.js",
     "start_local": "echo use: $ npm run dev",
     "dev": "node scripts/dev-server.js",
     "dev:simple": "node -r dotenv/config index.js",
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.2",
