--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:api": "node scripts/test-api.js",
-    "start": "node -r dotenv/config index.js",
-    "start_local": "echo use: $ npm run dev",
+    "start": "node index.js",
+    "start:local": "node -r dotenv/config index.js",
     "dev": "node scripts/dev-server.js",
     "dev:simple": "node -r dotenv/config index.js",
     "lint": "echo 'No linter configured'",
